--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="fabricjs-overlay-for-openseadragon" class="anchor" href="#fabricjs-overlay-for-openseadragon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fabricjs Overlay for <a href="http://openseadragon.github.io">OpenSeadragon</a>
-</h1>
+<a id="fabricjs-overlay-for-openseadragon" class="anchor" href="#fabricjs-overlay-for-openseadragon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fabricjs Overlay for OpenSeadragon</h1>
 
-<p>An OpenSeadragon plugin that adds fabricjs overlay capability.</p>
+<p>An <a href="http://openseadragon.github.io">OpenSeadragon</a> plugin that adds fabricjs overlay capability.</p>
 
 <p>Compatible with OpenSeadragon 2.0.0 or greater.</p>
 
