add demo to github page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <code>resize()</code>: If your viewer changes size, you'll need to resize the fabricjs overlay by calling this method.</li>
 </ul>
 
-<p>See demo.html for an example of it in use. </p>
+<p>See [demo](demo.html) or demo.html in github repository for an example of it in use. </p>
       </section>
     </div>
 
