--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Openseadragon-fabricjs-overlay : fabricjs canvas overlay for openseadragon">
+    <meta name="description" content="OpenSeadragonFabricjsOverlay : fabricjs canvas overlay for openseadragon">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Openseadragon-fabricjs-overlay</title>
+    <title>OpenSeadragonFabricjsOverlay</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/altert/openseadragon-fabricjs-overlay">View on GitHub</a>
 
-          <h1 id="project_title">Openseadragon-fabricjs-overlay</h1>
+          <h1 id="project_title">OpenSeadragonFabricjsOverlay</h1>
           <h2 id="project_tagline">fabricjs canvas overlay for openseadragon</h2>
 
             <section id="downloads">
@@ -41,7 +41,7 @@
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h2>
 
-<p>To use, include the <code>openseadragon-fabricjs-overlay.js</code> file after <code>openseadragon.js</code> on your web page.</p>
+<p>To use, include the <code>openseadragon-fabricjs-overlay.js</code> and <code>fabricjs.min.js</code> file after <code>openseadragon.js</code> on your web page.</p>
 
 <p>To add fabricjs overlay capability to your OpenSeadragon Viewer, call <code>fabricjsOverlay()</code> on it. This will return a new object with the following methods:</p>
 
@@ -59,7 +59,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Openseadragon-fabricjs-overlay maintained by <a href="https://github.com/altert">altert</a></p>
+        <p class="copyright">OpenSeadragonFabricjsOverlay maintained by <a href="https://github.com/altert">altert</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
