add link to fabricjs.com

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
 <a id="fabricjs-overlay-for-openseadragon" class="anchor" href="#fabricjs-overlay-for-openseadragon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fabricjs Overlay for OpenSeadragon</h1>
 
-<p>An <a href="http://openseadragon.github.io">OpenSeadragon</a> plugin that adds fabricjs overlay capability.</p>
+<p>An <a href="http://openseadragon.github.io">OpenSeadragon</a> plugin that adds <a href="http://fabricjs.com">Fabric.js</a> overlay capability.</p>
 
 <p>Compatible with OpenSeadragon 2.0.0 or greater.</p>
 
