Fix fabricjs canvas resizing on window resize

--- a/demo.html
+++ b/demo.html
@@ -162,6 +162,7 @@
                     
                     $(window).resize(function() {
                         overlay.resize();
+                        overlay.resizecanvas();
                     });
                 }
             };
