--- a/demo.html
+++ b/demo.html
@@ -6,7 +6,7 @@
         <script src="openseadragon-fabricjs-overlay.js"></script>
      
         
-        <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="fabricjs/fabricjs.min.js"></script>
         <style type="text/css">
 
