--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
 
 
         <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-        <script src="fabric/fabric.min.js"></script>
+        <script src="fabric/fabric.adapted.js"></script>
         <style type="text/css">
 
             html,
