enabled button toggle - drawing/draw

--- a/demo.html
+++ b/demo.html
@@ -1,200 +1,234 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>OpenSeadragon Fabricjs Overlay Demo</title>
-        <script src="openseadragon/openseadragon.js"></script>
-        <script src="openseadragon-fabricjs-overlay.js"></script>
 
+<head>
+    <title>OpenSeadragon Fabricjs Overlay Demo</title>
+    <script src="openseadragon/openseadragon.js"></script>
+    <script src="openseadragon-fabricjs-overlay.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="fabric/fabric.adapted.js"></script>
+    <!-- <script src="fabric/fabric.adapted.v363.js"></script> -->
+    <style type="text/css">
+        html,
+        body,
+        .openseadragon1 {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+        }
+    </style>
+    <script>
 
-        <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-        <script src="fabric/fabric.adapted.js"></script>
-        <style type="text/css">
-
-            html,
-            body,
-            .openseadragon1 {
-                width: 100%;
-                height: 100%;
-                margin: 0;
-            }
-
-        </style>
-        <script>
-
+        // ----------
+        App = {
             // ----------
-            App = {
-                // ----------
-                init: function() {
-                    var self = this;
+            init: function () {
+                var self = this;
 
-                    var tileSource = {
-                        Image: {
-                            xmlns: "http://schemas.microsoft.com/deepzoom/2008",
-                            Url: "http://openseadragon.github.io/example-images/highsmith/highsmith_files/",
-                            Format: "jpg",
-                            Overlap: "2",
-                            TileSize: "256",
-                            Size: {
-                                Height: "9221",
-                                Width:  "7026"
+                var tileSource = {
+                    Image: {
+                        xmlns: "http://schemas.microsoft.com/deepzoom/2008",
+                        Url: "http://openseadragon.github.io/example-images/highsmith/highsmith_files/",
+                        Format: "jpg",
+                        Overlap: "2",
+                        TileSize: "256",
+                        Size: {
+                            Height: "9221",
+                            Width: "7026"
+                        }
+                    }
+                };
+
+                var tileSourceIIIF = {
+                    "@context": "http://iiif.io/api/image/2/context.json",
+                    "@id": "https://libimages1.princeton.edu/loris/pudl0001%2F4609321%2Fs42%2F00000001.jp2",
+                    "height": 7200,
+                    "width": 5233,
+                    "profile": ["http://iiif.io/api/image/2/level2.json"],
+                    "protocol": "http://iiif.io/api/image",
+                    "tiles": [{
+                        "scaleFactors": [1, 2, 4, 8, 16, 32],
+                        "width": 1024
+                    }]
+                };
+
+                this.viewer = OpenSeadragon({
+                    id: "contentDiv",
+                    prefixUrl: "openseadragon/images/",
+                    tileSources: [{
+                        tileSource: tileSource,
+                        width: 1,
+                        y: 0,
+                        x: 0
+                    },
+                    {
+                        tileSource: tileSourceIIIF,
+                        width: 1,
+                        y: 0,
+                        x: 1.1
+                    }]
+                });
+
+                // initialize overlay
+                var options = {
+                    scale: 1000
+                }
+                var overlay = this.viewer.fabricjsOverlay(options);
+
+                // add fabric rectangle
+                var rect = new fabric.Rect({
+                    left: 0,
+                    top: 0,
+                    fill: 'red',
+                    width: 200,
+                    height: 200
+                });
+                overlay.fabricCanvas().add(rect);
+
+                // add fabric circle
+                var circle = new fabric.Circle({
+                    left: 1500,
+                    top: 0,
+                    fill: 'green',
+                    radius: 100,
+                    selectable: true,
+                    action: 'gravity'
+                });
+                overlay.fabricCanvas().add(circle);
+
+                // create circle falling animation
+                circle.animate('top', '+=1200', {
+                    onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
+                    duration: 2000,
+                    easing: fabric.util.ease.easeOutBounce
+                });
+
+                circle.animate('scaleY', '-=.1', {
+                    onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
+                    duration: 1000,
+
+                });
+
+                function isRealValue(obj) {
+                    return obj && obj !== 'null' && obj !== 'undefined';
+                }
+
+                /**
+                 * Toggle button on and off
+                 */
+                function btnDraw(flag, over, shape, txt) {
+                    if (flag) {
+                        self.viewer.setMouseNavEnabled(false);
+                        self.viewer.outerTracker.setTracking(false);
+                        shape.set('fill', 'lightgreen');
+                        over.fabricCanvas().isDrawingMode = true;
+                        txt.text = 'Draw';
+                        txt.left = 990;
+                        over.fabricCanvas().add(txt);
+                    } else {
+                        self.viewer.setMouseNavEnabled(true);
+                        self.viewer.outerTracker.setTracking(true);
+                        shape.set('fill', 'lightgray');
+                        over.fabricCanvas().add(shape);
+                        over.fabricCanvas().isDrawingMode = false;
+                        txt.text = 'Start\n drawing';
+                        txt.left = 950;
+                        over.fabricCanvas().add(txt);
+                    }
+
+                }
+
+                overlay.fabricCanvas().on('mouse:up', function (options) {
+
+                    if (isRealValue(options.target)) {
+
+                        console.log('up', options.target)
+
+                        if (options.target.type === "path") {
+                            btnDraw(false, overlay, circle2, text);
+                        }
+
+                        // animate circle on mouse release (try to drag circle up)
+                        if (options.target.action == 'gravity') {
+                            delta = overlay.fabricCanvas().height - options.target.top;
+                            if (delta > 0) {
+                                circle.animate('top', '+=' + (delta + 420), {
+                                    onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
+                                    duration: 2000,
+                                    easing: fabric.util.ease.easeOutBounce
+                                });
+                                circle.animate('scaleY', '-=.1', {
+                                    onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
+                                    duration: 1000,
+                                });
+
                             }
                         }
-                    };
-                    var tileSourceIIIF = {
-                        "@context": "http://iiif.io/api/image/2/context.json",
-                        "@id": "https://libimages1.princeton.edu/loris/pudl0001%2F4609321%2Fs42%2F00000001.jp2",
-                        "height": 7200,
-                        "width": 5233,
-                        "profile": [ "http://iiif.io/api/image/2/level2.json" ],
-                        "protocol": "http://iiif.io/api/image",
-                        "tiles": [{
-                          "scaleFactors": [ 1, 2, 4, 8, 16, 32 ],
-                          "width": 1024
-                        }]
-                    };
 
-                    this.viewer = OpenSeadragon({
-                        id: "contentDiv",
-                        prefixUrl: "openseadragon/images/",
-                        tileSources: [{
-                            tileSource: tileSource,
-                            width: 1,
-                            y: 0,
-                            x: 0
-                        },
-                        {
-                            tileSource: tileSourceIIIF,
-                            width: 1,
-                            y: 0,
-                            x: 1.1
-                        }]
-                    });
-
-                    // initialize overlay
-                    var options = {
-                      scale: 1000
+                    } else {
+                        console.log('X', options.target);
                     }
-                    var overlay = this.viewer.fabricjsOverlay(options);
 
-                    // add fabric rectangle
+                })
 
-                    var rect = new fabric.Rect({
-                      left: 0,
-                      top: 0,
-                      fill: 'red',
-                      width: 200,
-                      height: 200
-                    });
+                // add fabric circle with text
+                var circle2 = new fabric.Circle({
+                    left: 930,
+                    top: 100,
+                    fill: 'lightgray',
+                    radius: 120,
+                    selectable: false,
+                    action: 'button'
+                });
+                overlay.fabricCanvas().add(circle2);
 
-                    overlay.fabricCanvas().add(rect);
+                var text = new fabric.Text('Start\n drawing', {
+                    left: 950,
+                    top: 150,
+                    fontSize: 50,
+                    fontFamily: 'Helvetica',
+                    textAlign: 'center',
+                    fill: 'black',
+                    selectable: false,
+                    action: 'button'
 
-                    // add fabric circle
+                });
+                overlay.fabricCanvas().add(text);
 
-                    var circle = new fabric.Circle({
-                       left: 1500,
-                       top: 0,
-                       fill: 'green',
-                       radius: 100,
-                       selectable: true,
-                       action: 'gravity'
-                     });
+                overlay.fabricCanvas().freeDrawingBrush.color = 'red';
+                overlay.fabricCanvas().freeDrawingBrush.width = 30;
 
-                    overlay.fabricCanvas().add(circle);
+                // start freedrawing mode
+                overlay.fabricCanvas().on('mouse:down', function (options) {
 
-                    // create circle falling animation
-
-                    circle.animate('top', '+=1200', {
-                      onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
-                      duration: 2000,
-                      easing: fabric.util.ease.easeOutBounce
-                    });
-                    circle.animate('scaleY', '-=.1', {
-                      onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
-                      duration: 1000,
-
-                    });
-
-                    // animate circle on mouse release (try to drag circle up)
-
-                    overlay.fabricCanvas().on('mouse:up', function (options) {
-                        if (options.target&&(options.target.action=='gravity')) {
-                           delta=overlay.fabricCanvas().height-options.target.top;
-                           if (delta>0) {
-                               circle.animate('top', '+='+(delta+420), {
-                                 onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
-                                 duration: 2000,
-                                 easing: fabric.util.ease.easeOutBounce
-                               });
-                               circle.animate('scaleY', '-=.1', {
-                                 onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
-                                 duration: 1000,
-                               });
-
-                           }
+                    if (isRealValue(options.target)) {
+                        console.log('down', options.target)
+                        if (options.target.action == 'button') {
+                            btnDraw(true, overlay, circle2, text);
                         }
-                    })
+                    } else {
+                        console.log('X', options.target);
+                    }
 
-                    // add fabric circle with text
+                });
 
-                    var circle2 = new fabric.Circle({
-                       left: 930,
-                       top: 100,
-                       fill: 'lightgray',
-                       radius: 120,
-                       selectable: false,
-                       action: 'button'
-                     });
+                $(window).resize(function () {
+                    overlay.resize();
+                    overlay.resizecanvas();
+                });
+            }
+        };
 
-                    overlay.fabricCanvas().add(circle2);
+        // ----------
+        $(document).ready(function () {
+            App.init();
+        });
 
+    </script>
+</head>
 
-                     var text = new fabric.Text('Start\n drawing', {
-                        left: 950,
-                        top: 150,
-                        fontSize: 50,
-                        fontFamily: 'Helvetica',
-                        textAlign: 'center',
-                        fill: 'black',
-                        selectable: false,
-                        action: 'button'
+<body>
+    <div id="contentDiv" class="openseadragon1"></div>
+</body>
 
-                        });
-                    overlay.fabricCanvas().add(text);
-
-
-
-                    overlay.fabricCanvas().freeDrawingBrush.color='red';
-                    overlay.fabricCanvas().freeDrawingBrush.width=30;
-
-                     // start freedrawing mode
-
-                    overlay.fabricCanvas().on('mouse:down', function (options) {
-
-                        if (options.target&&(options.target.action=='button')) {
-                            self.viewer.setMouseNavEnabled(false);
-                            self.viewer.outerTracker.setTracking(false);
-                            circle2.set('fill','lightgreen');
-                            overlay.fabricCanvas().isDrawingMode=true;
-                        }
-                    });
-
-
-
-                    $(window).resize(function() {
-                        overlay.resize();
-                        overlay.resizecanvas();
-                    });
-                }
-            };
-
-            // ----------
-            $(document).ready(function() {
-                App.init();
-            });
-
-        </script>
-    </head>
-    <body>
-        <div id="contentDiv" class="openseadragon1"></div>
-    </body>
 </html>
