--- a/demo.html
+++ b/demo.html
@@ -6,8 +6,8 @@
     <script src="openseadragon/openseadragon.js"></script>
     <script src="openseadragon-fabricjs-overlay.js"></script>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <!-- <script src="fabric/fabric.adapted.js"></script> -->
-    <script src="fabric/fabric.adapted.v363.js"></script>
+    <script src="fabric/fabric.adapted.js"></script>
+    <!-- <script src="fabric/fabric.adapted.v363.js"></script> -->
     <style type="text/css">
         html,
         body,
@@ -138,19 +138,22 @@
 
                 }
 
-                overlay.fabricCanvas().on('mouse:up', function (options) {
+                overlay.fabricCanvas().on('path:created', function(e) {
+                    console.log("path:created", e)
+                });
 
-                    if (isRealValue(options.target)) {
+                overlay.fabricCanvas().on('mouse:up', function (event) {
 
-                        //console.log('up', options.target)
+                    if (isRealValue(event.target)) {
+                        //console.log('up', event.target)
 
-                        if (options.target.type === "path") {
+                        if (event.target.type === "path") {
                             btnDraw(false, overlay, circle2, text);
                         }
 
                         // animate circle on mouse release (try to drag circle up)
-                        if (options.target.action == 'gravity') {
-                            delta = overlay.fabricCanvas().height - options.target.top;
+                        if (event.target.action === 'gravity') {
+                            delta = overlay.fabricCanvas().height - event.target.top;
                             if (delta > 0) {
                                 circle.animate('top', '+=' + (delta + 420), {
                                     onChange: overlay.fabricCanvas().renderAll.bind(overlay.fabricCanvas()),
@@ -166,7 +169,7 @@
                         }
 
                     } else {
-                        //console.log('up: X', options.target);
+                        //console.log('up: X', event.target);
                         btnDraw(false, overlay, circle2, text);
                     }
 
@@ -199,16 +202,15 @@
                 overlay.fabricCanvas().freeDrawingBrush.color = 'red';
                 overlay.fabricCanvas().freeDrawingBrush.width = 30;
 
-                // start freedrawing mode
-                overlay.fabricCanvas().on('mouse:down', function (options) {
-
-                    if (isRealValue(options.target)) {
-                        //console.log('down', options.target)
-                        if (options.target.action == 'button') {
+                // start free-drawing mode
+                overlay.fabricCanvas().on('mouse:down', function (event) {
+                    if (isRealValue(event.target)) {
+                        //console.log('down', event.target)
+                        if (event.target.action === 'button') {
                             btnDraw(true, overlay, circle2, text);
                         }
                     } else {
-                        //console.log('down: X', options.target);
+                        //console.log('down: X', event.target);
                     }
 
                 });
