--- a/demo.html
+++ b/demo.html
@@ -215,9 +215,10 @@
 
                 });
 
+                // Resize the overlay together with the window, on window resize.
                 $(window).resize(function () {
                     overlay.resize();
-                    overlay.resizecanvas();
+                    overlay.resizeCanvas();
                 });
             }
         };
