update to latest master

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h2>
 
-<p>To use, include the <code>openseadragon-fabricjs-overlay.js</code> and <code>fabricjs.min.js</code> file after <code>openseadragon.js</code> on your web page.</p>
+<p>To use, include the <code>openseadragon-fabricjs-overlay.js</code> and <code>fabric.adapted.js</code> file after <code>openseadragon.js</code> on your web page.</p>
 
 <p>To add fabricjs overlay capability to your OpenSeadragon Viewer, call <code>fabricjsOverlay()</code> on it. This will return a new object with the following methods:</p>
 
